[gd_scene load_steps=29 format=3 uid="uid://c0d3bmprmf8q0"]

[ext_resource type="Script" path="res://Scripts/Characters/Player/Player.gd" id="1_ld2le"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/CameraController.gd" id="2_7jqee"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/StateMachine.gd" id="3_82ko5"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Idle.gd" id="4_h88q0"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Run.gd" id="5_dheqf"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Crouch.gd" id="6_q58v3"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Grapple.gd" id="6_r5qvj"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Air.gd" id="6_wo20p"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Hanging.gd" id="7_ycs8f"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Grind.gd" id="8_82ggy"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Dodge.gd" id="8_rlkj8"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Block.gd" id="9_lxqh2"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Magnet.gd" id="10_0mhbm"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/States/Melee.gd" id="10_1rkfv"]
[ext_resource type="PackedScene" uid="uid://ds03o1qebetux" path="res://Scenes/Characters/Player/Gadgets/GrindBoots.tscn" id="10_8algw"]
[ext_resource type="PackedScene" uid="uid://bihfxywywukdv" path="res://Scenes/Characters/Player/CharacterSkin.tscn" id="13_elups"]
[ext_resource type="PackedScene" uid="uid://cqhn455src0iq" path="res://Scenes/Characters/Player/Gadgets/GrapplingHook.tscn" id="13_vujhk"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/Inventory.gd" id="16_kqrv3"]
[ext_resource type="PackedScene" uid="uid://cfru43w2xfbl2" path="res://Scenes/Characters/Player/Weapons/RangedWeapons/Gun/Gun.tscn" id="17_ntt0n"]
[ext_resource type="Theme" uid="uid://d02hntmjt67aj" path="res://UI/UITheme_1.tres" id="19_1icc6"]
[ext_resource type="PackedScene" uid="uid://cc6mfpfv1cnw7" path="res://Scenes/Characters/Player/Gadgets/GrindBoots_v2.tscn" id="20_iksty"]
[ext_resource type="Texture2D" uid="uid://dmf404ftfexwl" path="res://Assets/Decals/DropShadow/Shadow.png" id="22_gwf8y"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_p4inm"]
height = 1.50214
radius = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3srxm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dm5n6"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_p3l5c"]
material = SubResource("StandardMaterial3D_dm5n6")

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_w05h1"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8gs1p"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_ld2le")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CylinderShape3D_p4inm")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_82ko5")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_h88q0")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("5_dheqf")

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource("6_wo20p")

[node name="Crouch" type="Node" parent="StateMachine"]
script = ExtResource("6_q58v3")

[node name="Hang" type="Node" parent="StateMachine"]
script = ExtResource("7_ycs8f")

[node name="Dodge" type="Node" parent="StateMachine"]
script = ExtResource("8_rlkj8")

[node name="Block" type="Node" parent="StateMachine"]
script = ExtResource("9_lxqh2")

[node name="Melee" type="Node" parent="StateMachine"]
script = ExtResource("10_1rkfv")

[node name="MonkeyBars" type="Node" parent="StateMachine"]
script = ExtResource("7_ycs8f")

[node name="Grapple" type="Node" parent="StateMachine"]
script = ExtResource("6_r5qvj")

[node name="Grind" type="Node" parent="StateMachine"]
script = ExtResource("8_82ggy")

[node name="Magnet" type="Node" parent="StateMachine"]
script = ExtResource("10_0mhbm")

[node name="PhysicsBody" type="RigidBody3D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0
freeze = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="PhysicsBody"]
transform = Transform3D(1, 0, 0, 0, 0.75, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CylinderShape3D_3srxm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PhysicsBody"]
transform = Transform3D(1, 0, 0, 0, 0.75, 0, 0, 0, 1, 0, 0.75, 0)
mesh = SubResource("CylinderMesh_p3l5c")

[node name="CameraController" type="Node3D" parent="."]
top_level = true
script = ExtResource("2_7jqee")
invert_mouse_y = true
tilt_upper_limit = 0.48
tilt_lower_limit = -0.8

[node name="CameraOverShoulderPivot" type="Marker3D" parent="CameraController"]
transform = Transform3D(-0.994522, 0.0401698, -0.0965018, 0, 0.92321, 0.384295, 0.104528, 0.38219, -0.918153, -0.85, 3.49, -2.33)

[node name="CameraAimPivot" type="Marker3D" parent="CameraController"]

[node name="CameraSpringArm" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(-1, -3.23243e-08, 8.12273e-08, 0, 0.929133, 0.369747, -8.74228e-08, 0.369747, -0.929133, 0, 2.34, 0)
shape = SubResource("SeparationRayShape3D_w05h1")
spring_length = 10.0

[node name="CameraThirdPersonPivot" type="Marker3D" parent="CameraController/CameraSpringArm"]

[node name="PlayerCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(-1, -3.23243e-08, 8.12273e-08, 0, 0.929133, 0.369747, -8.74228e-08, 0.369747, -0.929133, 0, 6.04, -9.3)
top_level = true
fov = 50.0

[node name="CameraRayCast" type="RayCast3D" parent="CameraController/PlayerCamera"]
visible = false
target_position = Vector3(0, 0, -100)

[node name="GroundShapeCast" type="ShapeCast3D" parent="."]
visible = false
shape = SubResource("CylinderShape3D_8gs1p")
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="CharacterRotationRoot" type="Node3D" parent="."]

[node name="CharacterSkin" parent="CharacterRotationRoot" instance=ExtResource("13_elups")]

[node name="PlayerHand" type="Node3D" parent="CharacterRotationRoot"]

[node name="Blaster" parent="CharacterRotationRoot/PlayerHand" instance=ExtResource("17_ntt0n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12975, 0.941938)
visible = false

[node name="Inventory" type="Node3D" parent="."]
script = ExtResource("16_kqrv3")

[node name="Weapons" type="Node3D" parent="Inventory"]

[node name="Gadgets" type="Node3D" parent="Inventory"]

[node name="GrapplingHook" parent="Inventory/Gadgets" instance=ExtResource("13_vujhk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.91362, 0.0314813)

[node name="GrindBoots" parent="Inventory/Gadgets" instance=ExtResource("10_8algw")]

[node name="GrindBootsV2" parent="Inventory/Gadgets" instance=ExtResource("20_iksty")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHUD" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="CanvasLayer/PlayerHUD"]
layout_mode = 0
offset_right = 179.0
offset_bottom = 61.0
theme = ExtResource("19_1icc6")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PlayerHUD/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 50.0
offset_bottom = 46.0
color = Color(0.796078, 0.796078, 0.796078, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PlayerHUD/Panel"]
layout_mode = 0
offset_left = 68.0
offset_right = 177.0
offset_bottom = 61.0
theme = ExtResource("19_1icc6")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PlayerHUD/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PlayerHUD/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "100"

[node name="Label2" type="Label" parent="CanvasLayer/PlayerHUD/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="Label3" type="Label" parent="CanvasLayer/PlayerHUD/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "100"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/PlayerHUD/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
show_percentage = false

[node name="HP_Display" type="Control" parent="CanvasLayer/PlayerHUD"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 62.0
offset_right = 179.0
offset_bottom = 102.0

[node name="HP_0" type="ColorRect" parent="CanvasLayer/PlayerHUD/HP_Display"]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 33.0
offset_bottom = 30.0

[node name="HP_1" type="ColorRect" parent="CanvasLayer/PlayerHUD/HP_Display"]
layout_mode = 0
offset_left = 38.0
offset_top = 6.0
offset_right = 63.0
offset_bottom = 29.0

[node name="HP_2" type="ColorRect" parent="CanvasLayer/PlayerHUD/HP_Display"]
layout_mode = 0
offset_left = 67.0
offset_top = 5.0
offset_right = 92.0
offset_bottom = 28.0

[node name="HP_3" type="ColorRect" parent="CanvasLayer/PlayerHUD/HP_Display"]
layout_mode = 0
offset_left = 98.0
offset_top = 6.0
offset_right = 123.0
offset_bottom = 29.0

[node name="HP_4" type="ColorRect" parent="CanvasLayer/PlayerHUD/HP_Display"]
layout_mode = 0
offset_left = 130.0
offset_top = 6.0
offset_right = 155.0
offset_bottom = 29.0

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DropShadow" type="Decal" parent="."]
size = Vector3(1, 1, 1)
texture_albedo = ExtResource("22_gwf8y")
albedo_mix = 0.8
upper_fade = 1.0
lower_fade = 0.01
distance_fade_begin = 172.53
distance_fade_length = 1000.0

[connection signal="timeout" from="SlideTimer" to="StateMachine/Crouch" method="_on_slide_timer_timeout"]
